<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="es.dlacalle.motonotify.PrincipalFragment">


    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_servicioonoff"
        android:id="@+id/ServicioOnOff"
        android:onClick="buttonClickedMain"
        android:textOn="Desactivar Servicio"
        android:textOff="Activar Servicio"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_btlabel"
        android:id="@+id/btlabel"
        android:layout_below="@+id/ServicioOnOff"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_btLabelEstado"
        android:id="@+id/btLabelEstado"
        android:layout_below="@+id/ServicioOnOff"
        android:layout_toEndOf="@+id/btlabel"
        android:textColor="#ffc60000"
        android:layout_marginLeft="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ListaNotificaciones"
        android:layout_below="@+id/btlabel"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/Preview" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Preview"
        android:adjustViewBounds="true"
        android:src="@drawable/uber_autobot"
        android:contentDescription="@string/text_imagenPreview"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
